--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <joke></joke>
     <script type="riot/tag" src="monster.tag"></script>
     <script type="riot/tag" src="joke.tag"></script>
+    <script type="riot/tag" src="singlejoke.tag"></script>
     <!-- include riot.js -->
     <script src="https://cdn.jsdelivr.net/npm/riot@3.8/riot+compiler.min.js"></script>
     <!-- mount the tag -->
